packages/forge-dsl/fixtures/errors/e03-undefined-var.fable
// expect: FORGE203
VAR hunger = 2

-> hunt
=== hunt ===
~ hunger = hunger + hungr
-> END
